# smart-containers

./: .embed.toml  .gdbinit  Cargo.toml
.cargo/: config.toml
src/: main.rs
