[package]
authors = ["Lachezar Lechev <elpiel93@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "smart-containers"
version = "0.1.0"

[features]
# default = ["nrf52840"]
# nrf52840 = ["nrf52840-hal"]

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
cortex-m-rtic = "0.5.9"
panic-semihosting = "0.5"

# panic-halt = "0.2.0"

# nrf52840-pac = "0.10"
# nrf52840-hal = { version = "0.14", optional = true }
nrf52840-hal = { version = "0.14" }

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "smart-containers"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
