[package]
authors = ["Lachezar Lechev <elpiel93@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "smart-containers"
version = "0.1.0"

[features]
# default = ["nrf52840"]
# nrf52840 = ["nrf52840-hal"]

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-rtic = "0.5.9"

panic-halt = "0.2.0"
nb = "1.0.0"

nrf52840-hal = { version = "0.14" }
nrf52840-dk-bsp = { version = "0.2" }

# probe-rs = "0.11"

[dependencies.panic-rtt-target]
version = "0.1.1"
features = ["cortex-m"]

[dependencies.rtt-target]
version = "0.3.0"
features = ["cortex-m"]

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# this lets you use `cargo fix`!
[[bin]]
name = "smart-containers"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
